<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewDataTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/profile_data_title"
        android:textColor="@color/orange"
        android:textSize="14sp"
        app:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/titleName"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/title_name"
        app:layout_constraintTop_toBottomOf="@+id/textViewDataTitle" />

    <TextView
        android:id="@+id/labelName"
        style="@style/MainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="2dp"
        android:text="@string/label_name"
        app:layout_constraintTop_toBottomOf="@+id/titleName" />

    <TextView
        android:id="@+id/titleSurname"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/title_surname"
        app:layout_constraintTop_toBottomOf="@+id/labelName" />

    <TextView
        android:id="@+id/labelSurname"
        style="@style/MainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="2dp"
        android:text="@string/label_surname"
        app:layout_constraintTop_toBottomOf="@+id/titleSurname" />

    <TextView
        android:id="@+id/titleEmail"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/title_email"
        app:layout_constraintTop_toBottomOf="@+id/labelSurname" />

    <TextView
        android:id="@+id/labelEmail"
        style="@style/MainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="2dp"
        android:text="@string/label_email"
        app:layout_constraintTop_toBottomOf="@+id/titleEmail" />

    <TextView
        android:id="@+id/titleLogin"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/title_login"
        app:layout_constraintTop_toBottomOf="@+id/labelEmail" />

    <TextView
        android:id="@+id/labelLogin"
        style="@style/MainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="2dp"
        android:text="@string/label_login"
        app:layout_constraintTop_toBottomOf="@+id/titleLogin" />

    <TextView
        android:id="@+id/titleRegion"
        style="@style/Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/title_region"
        app:layout_constraintEnd_toStartOf="@+id/imageViewEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelLogin" />

    <TextView
        android:id="@+id/labelRegion"
        style="@style/MainText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleRegion"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="2dp"
        android:text="@string/label_region"
        app:layout_constraintEnd_toStartOf="@+id/imageViewEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleRegion" />

    <ImageView
        android:id="@+id/imageViewEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="12dp"
        android:background="?selectableItemBackgroundBorderless"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/labelRegion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleRegion"
        app:srcCompat="@drawable/ic_edit" />


    <TextView
        android:id="@+id/textViewExit"
        style="@style/MainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:background="?selectableItemBackground"
        android:drawablePadding="32dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/exit_button_label"
        app:drawableStartCompat="@drawable/ic_exit"
        app:layout_constraintTop_toBottomOf="@+id/labelRegion" />


</androidx.constraintlayout.widget.ConstraintLayout>

